--- a/admin-server/src/main/resources/application.properties
+++ b/admin-server/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+spring.mail.host=smtp.qq.com
+spring.mail.port=587
+spring.mail.username=446933040@qq.com
+spring.mail.password=ufpvyxynbnytbjjd
+spring.mail.default-encoding=UTF-8
+spring.mail.properties.mail.smtp.socketFactoryClass=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.debug=true
+
+spring.boot.admin.notify.mail.to=446933040@qq.com
+spring.boot.admin.notify.mail.from=446933040@qq.com
+# \u4EFB\u4F55\u6539\u53D8\u90FD\u53D1\u90AE\u4EF6
+spring.boot.admin.notify.mail.ignore-changes=
